import { Temporada } from "./temporada";

export default class TemporadaMedia implements Temporada{
    public modificador:number = 0;
}