@startuml Diagrama de clases
class Garage {
    - temporada: Temporada
    - vehiculos: Map<string,Vehiculo>;
    
    + comprarVehiculo(vehiculo: Vehiculo)
    + setters_y_getters()
    + cambiarTemporada()
    + reservar()
    + mantener()
    + devolver()
}

abstract class Vehiculo {
    - matricula: string
    - estado: Estado
    - registroReserva: Registo
    - kilometrosRecorridos: number
    - ultimoMantenimeinto: Date
    - alquileresDesdeMantenimiento: number
    - necesitaLimpieza: boolean
    - alquileresTotales: number
    - rentabilidad: number

    + setters_y_getters()

    + dispararMantenimiento()
    + actualizarTableroReserva()
    + actualizarTableroMantenimiento()

    + abstract obtenerTarifaReserva(dias: number, kilometros: number)
    + abstract obtenerTarifaMantenimiento(dias: number)
}
class Compacto {}
class Sedán {}
class SUV {}

abstract class Estado{
    # vehiculo: Vehiculo
    - fechaInicio: Date
    - fechaFin: Date

    + getters()
    + colisiona()

    + abstract reservar()
    + abstract mantener()
    + abstract devolver()
}
class Disponible {}
class EnReseva {}
class EnMantenimiento {}

abstract class Registro {
    # registro: Set<Estado>
    + abstract getRegistro():Set<Estado>
}
class RegistroReserva extends Registro{}

interface ReporteI {
    analizar(garage:Garage):Vehiculo
}
class VehiculoMasAlquilado implements ReporteI {}
class VehiculoMenosAlquilado implements ReporteI {}
class VehiculoMayorRentabilidad implements ReporteI {}
class VehiculoMenorRentabilidad implements ReporteI {}

interface OcupacionFlotaI {
    analizar(garage:Garage,fecha:Date):number
}
class OcupacionFlota implements OcupacionFlotaI {}


interface Temporada {
    modificador:number
}
class TemporadaBaja implements Temporada{
    modificador:number
}
class TemporadaMedia implements Temporada{
    modificador:number  
}
class TemporadaAlta implements Temporada{
    modificador:number
}


' Relaciones


Garage *-d- Vehiculo
Garage *-- Temporada

Vehiculo <|-- Compacto
Vehiculo <|-- Sedán
Vehiculo <|-- SUV

Vehiculo *-l- Estado
Vehiculo *-r- Registro

Estado <|-- Disponible
Estado <|-- EnReseva
Estado <|-- EnMantenimiento


@enduml